-- suspend active when purging caches
-- temporary support for legacy paf_max
-- zero frag tweak from josh
-- fix / redefine --dirty-pig - no shutdown flushes
-- fixed pcre reload init
-- refactored main init / reload code
-- fixed cmake -ldl issue
-- fixed normalization broke by the init/reload refactoring :(
-- fixed 296-9 tcp segfault
-- update from josh

127
-- REG_TEST out logging tcp options for rebuilt packets to match snort bug
-- tweaked S5_TRACE output for consistency
-- disabled new_http_inspect from REG_TEST (accidentally enabled)
-- squelch 129:9 and 129:10 if link addrs are swapped
-- tweaks from Josh
-- tweaked inspector execution
-- fixed parsing of reference with \;
-- fixed ips classtype segfault on ctor after parse error
-- new_http_inspect now gid 219 and other Tom Tweaks
-- new_http_inspect reactiveated (no longer REG_TEST only)
-- ip defrag fixes from Josh
-- added default bindings for stream only configs
-- added --warn-all
-- refactored normalizer flags
-- fixed port_scan logfile to default to off
-- fixed flowbits init
-- fixed byte extract var init
-- changed doc to use "legacy" instead of "classic"
-- restricted reload to basic modules and inspectors only
-- commented out snort.process() and snort.reload_hosts() for alpha 1
-- codec fix from Josh
-- prevent repeated small chunk length alerts from HI
-- fixed normalization config init
-- fixed block etc. rule parsing
-- added comment for binder bug
-- fixed non-paf splitter init
-- fixed splitter update calls
-- fixed boyer-moore init
-- removed content extract var cruft
-- latest from Josh
-- initial /* comments */ for text rules (needs to ignore \")
-- latest from Josh
-- added --c2x and --x2c since i'm tired of looking this stuff up!
-- added hi event squelch
-- fixed stream_ip defaults
-- fixed binder[2] = { { when = { }, user = { } } } (extra { })
-- fixed static flush points
-- added stream_tcp.segs_split peg
-- snort2lua patch
-- changed from 2.10 to 3.0

126